Steam4NET2/Steam4NET2/autogen/UserStatsCommon.cs

// This file is automatically generated.
using System;
using System.Text;
using System.Runtime.InteropServices;

namespace Steam4NET
{

	public enum ESteamUserStatType : int
	{
		k_ESteamUserStatTypeINVALID = 0,
		k_ESteamUserStatTypeINT = 1,
		k_ESteamUserStatTypeFLOAT = 2,
		k_ESteamUserStatTypeAVGRATE = 3,
		k_ESteamUserStatTypeACHIEVEMENTS = 4,
		k_ESteamUserStatTypeGROUPACHIEVEMENTS = 5,
	};
	
	public enum ELeaderboardDataRequest : int
	{
		k_ELeaderboardDataRequestGlobal = 0,
		k_ELeaderboardDataRequestGlobalAroundUser = 1,
		k_ELeaderboardDataRequestFriends = 2,
	};
	
	public enum ELeaderboardDisplayType : int
	{
		k_ELeaderboardDisplayTypeNone = 0,
		k_ELeaderboardDisplayTypeNumeric = 1,
		k_ELeaderboardDisplayTypeTimeSeconds = 2,
		k_ELeaderboardDisplayTypeTimeMilliSeconds = 3,
	};
	
	public enum ELeaderboardUploadScoreMethod : int
	{
		k_ELeaderboardUploadScoreMethodNone = 0,
		k_ELeaderboardUploadScoreMethodKeepBest = 1,
		k_ELeaderboardUploadScoreMethodForceUpdate = 2,
	};
	
	public enum ELeaderboardSortMethod : int
	{
		k_ELeaderboardSortMethodNone = 0,
		k_ELeaderboardSortMethodAscending = 1,
		k_ELeaderboardSortMethodDescending = 2,
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct LeaderboardEntry001_t
	{
		UInt64 m_steamIDUser;
		Int32 m_nGlobalRank;
		Int32 m_nScore;
		Int32 m_cDetails;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct LeaderboardEntry002_t
	{
		Int32 placeholder;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct UserStatsReceived_t
	{
		UInt64 m_nGameID;
		EResult m_eResult;
		UInt64 m_steamIDUser;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct UserStatsStored_t
	{
		UInt64 m_nGameID;
		EResult m_eResult;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct UserAchievementStored_t
	{
		UInt64 m_nGameID;
		[MarshalAs(UnmanagedType.I1)]
		bool m_bGroupAchievement;
		[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 128)]
		string m_rgchAchievementName;
		UInt32 m_nCurProgress;
		UInt32 m_nMaxProgress;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct LeaderboardFindResult_t
	{
		UInt64 m_hSteamLeaderboard;
		Byte m_bLeaderboardFound;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct LeaderboardScoresDownloaded_t
	{
		UInt64 m_hSteamLeaderboard;
		UInt64 m_hSteamLeaderboardEntries;
		Int32 m_cEntryCount;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct LeaderboardScoreUploaded_t
	{
		Byte m_bSuccess;
		UInt64 m_hSteamLeaderboard;
		Int32 m_nScore;
		Byte m_bScoreChanged;
		Int32 m_nGlobalRankNew;
		Int32 m_nGlobalRankPrevious;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct NumberOfCurrentPlayers_t
	{
		Byte m_bSuccess;
		Int32 m_cPlayers;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct UserStatsUnloaded_t
	{
		UInt64 m_steamIDUser;
	};
	
	[StructLayout(LayoutKind.Sequential,Pack=8)]
	public struct UserAchievementIconFetched_t
	{
		UInt64 m_nGameID;
		[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 128)]
		string m_rgchAchievementName;
		[MarshalAs(UnmanagedType.I1)]
		bool m_bAchieved;
		Int32 m_nIconHandle;
	};
	
}
